# f1-telemetry

./: .gitignore  Cargo.toml  README.md  api.yml  app.go  go.mod  go.sum  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts  wails.json
app/: main.rs  server_controller.rs  state.rs
cmd/cli/: collect.go  common.go  database.go  graph.go  main.go  query.go  send.go  server.go
docs/specifications/: README.md
examples/: data.txt  data2.txt  data3.txt  data4.txt
frontend/: api.ts  main.css  store.ts
frontend/controls/: Tip.tsx
frontend/icons/: index.tsx
frontend/pages/: App.tsx  GraphPage.tsx  HomePage.tsx  MapPage.tsx  QueryPage.tsx  SettingsPage.tsx
internal/api/: api.go  cors.go  json.go  labels.go  query.go  sessions.go  util.go
internal/app/: action.go  app.go
internal/cli/: collect.go  database.go  parse.go  query.go  send.go  server.go
internal/server/: server.go
internal/timeseries/: timeseries.go  utils.go
internal/util/: logging.go
internal/web/: web.go
telemetry/: packet.go  parser.go  timeseries.go
telemetry/f12021/: driver_string.go  drivers.go  header.go  nationalities.go  nationality_string.go  packet.go  packetcardamage.go  packetcarsetup.go  packetcarstatus.go  packetcartelemetry.go  packetevent.go  packetfinalclassification.go  packetheader.go  packetid.go  packetid_string.go  packetlap.go  packetlobby.go  packetmotion.go  packetparticipants.go  packetsession.go  packetsessionhistory.go  parser.go  parser_test.go  teams.go  (+9 more)
web/: api.ts  graphs.css  index.html  main.css  main.tsx  window.d.ts
(+38 files in other folders)
