[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Alex Gustafsson <alex-gustafsson@live.se>"]
license = ""
repository = "github.com/AlexGustafsson/f1-telemetry"
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
anyhow = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "app"
path = "app/main.rs"
